--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>model-viewer demo</title>
-  <link href="AR/AR.css" rel="stylesheet" type="text/css">
+  <link href="AR.css" rel="stylesheet" type="text/css">
 	  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
   </head>
   <body>
