--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	poster="sukimamori.jpg"
 	camera-controls
 >
-	<button id="custom-ar-button" slot="ar-button" ></button>
+	<button id="custom-ar-button" slot="ar-button" >ARをはじめよう！</button>
 	</model-viewer>
   </body>
 </html>
